Updated contents of gitignore
hopefully now won't show everyones computer passwords / refactor the
dependencies.

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,10 @@ $RECYCLE.BIN/
 *.msi
 *.msm
 *.msp
-
+\src\main\resources\application.properties
+\.mvn
+\.idea
+\.settings
 # Windows shortcuts
 *.lnk
 
