Commit to remove

--- a/.gitignore
+++ b/.gitignore
@@ -13,10 +13,10 @@ $RECYCLE.BIN/
 *.msi
 *.msm
 *.msp
-\src\main\resources\application.properties
-\.mvn
-\.idea
-\.settings
+application.properties/
+mvn/
+idea/
+settings/
 # Windows shortcuts
 *.lnk
 
