--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 /src/main/resources/application.properties
 !/.idea/workspace.xml
 !/src/main/resources/application.properties
+.metadata/**
+target/**
+*~*
