--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,9 @@
 target/**
 *~*
 *.class
+
+target/classes/application.properties
+
+src/main/resources/application.properties
+
+target/classes/application.properties
