got profile to show logged in user!

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ target/classes/application.properties
 src/main/resources/application.properties
 
 target/classes/application.properties
+
+target/classes/application.properties
